--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Drivers/nRF24L01P-lib"]
-	path = Drivers/nRF24L01P-lib
+[submodule "Libraries/nRF24L01P-lib"]
+	path = Libraries/nRF24L01P-lib
 	url = https://github.com/LiU-SeeGoals/nRF24L01P-lib
