--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "Libraries/nRF24L01P-lib"]
 	path = Libraries/nRF24L01P-lib
 	url = https://github.com/LiU-SeeGoals/nRF24L01P-lib
+[submodule "proto-messages"]
+	path = proto-messages
+	url = git@github.com:LiU-SeeGoals/proto-messages.git
+[submodule "nanopb"]
+	path = nanopb
+	url = git@github.com:nanopb/nanopb.git
