--- a/.cproject
+++ b/.cproject
@@ -65,6 +65,7 @@
 									<listOptionValue builtIn="false" value="../Drivers/BSP/Components/lan8742"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/basestation/Libraries/nRF24L01P-lib}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/basestation/Libraries/protobuf/Inc}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/basestation/Libraries/protobuf}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1389748049" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -97,8 +98,8 @@
 						<entry excluding="examples" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Libraries/nRF24L01P-lib"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="NetXDuo"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Core"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Libraries/protobuf/protobuf-c"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Middlewares"/>
-						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Libraries/protobuf/Src"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -164,6 +165,7 @@
 									<listOptionValue builtIn="false" value="../NetXDuo/Target"/>
 									<listOptionValue builtIn="false" value="../Middlewares/ST/netxduo/common/drivers/ethernet"/>
 									<listOptionValue builtIn="false" value="../Drivers/BSP/Components/lan8742"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/basestation/Libraries/protobuf}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.114427080" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -261,6 +263,7 @@
 									<listOptionValue builtIn="false" value="../NetXDuo/Target"/>
 									<listOptionValue builtIn="false" value="../Middlewares/ST/netxduo/common/drivers/ethernet"/>
 									<listOptionValue builtIn="false" value="../Drivers/BSP/Components/lan8742"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/basestation/Libraries/protobuf}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.48444018" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -304,15 +307,6 @@
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
-	<storageModule moduleId="scannerConfiguration">
-		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
-		<scannerConfigBuildInfo instanceId="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.release.1056989071;com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.release.1056989071.;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.707540052;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.114427080">
-			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId=""/>
-		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.1642960711;com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.1642960711.;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.642932950;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1389748049">
-			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId=""/>
-		</scannerConfigBuildInfo>
-	</storageModule>
 	<storageModule moduleId="refreshScope" versionNumber="2">
 		<configuration configurationName="Compiledb">
 			<resource resourceType="PROJECT" workspacePath="/basestation"/>
@@ -323,5 +317,17 @@
 		<configuration configurationName="Release">
 			<resource resourceType="PROJECT" workspacePath="/basestation"/>
 		</configuration>
+	</storageModule>
+	<storageModule moduleId="scannerConfiguration">
+		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		<scannerConfigBuildInfo instanceId="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.release.1056989071;com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.release.1056989071.;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.707540052;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.114427080">
+			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId=""/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.1642960711.1894333075;com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.1642960711.1894333075.;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.199474950;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.48444018">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.1642960711;com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.1642960711.;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.642932950;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1389748049">
+			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId=""/>
+		</scannerConfigBuildInfo>
 	</storageModule>
 </cproject>
