--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "nanopb"]
 	path = nanopb
 	url = git@github.com:nanopb/nanopb.git
+[submodule "Libraries/proto-messages"]
+	path = Libraries/proto-messages
+	url = git@github.com:LiU-SeeGoals/proto-messages.git
