added log module

--- a/.cproject
+++ b/.cproject
@@ -67,6 +67,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/basestation/Libraries/proto-messages/robot_action}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/basestation/Libraries/proto-messages/ssl_vision}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/basestation/Libraries/nanopb/Inc}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/basestation/Libraries/fw-shared-modules/Inc}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1389748049" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -97,6 +98,7 @@
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="AZURE_RTOS"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Core"/>
 						<entry excluding="nRF24L01P-lib/examples" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Drivers"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Libraries/fw-shared-modules/Src"/>
 						<entry excluding="examples" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Libraries/nRF24L01P-lib"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Libraries/nanopb/Src"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Libraries/proto-messages/robot_action"/>
