--- a/.cproject
+++ b/.cproject
@@ -63,12 +63,10 @@
 									<listOptionValue builtIn="false" value="../NetXDuo/Target"/>
 									<listOptionValue builtIn="false" value="../Middlewares/ST/netxduo/common/drivers/ethernet"/>
 									<listOptionValue builtIn="false" value="../Drivers/BSP/Components/lan8742"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/basestation/Libraries/nRF24L01P-lib}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/basestation/Libraries/protobuf}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/basestation/Libraries/proto-messages/robot_action}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/basestation/Libraries/proto-messages/ssl_vision}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/basestation/Libraries/nanopb/Inc}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/basestation/Libraries/fw-shared-modules/Inc}&quot;"/>
+									<listOptionValue builtIn="false" value="../Libraries/fw-shared-modules/Inc"/>
+									<listOptionValue builtIn="false" value="../Libraries/nRF24L01P-lib"/>
+									<listOptionValue builtIn="false" value="../Libraries/proto-messages/proto_c"/>
+									<listOptionValue builtIn="false" value="../Libraries/protobuf"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1389748049" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -95,20 +93,42 @@
 							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objcopy.symbolsrec.224196938" name="MCU Output Converter Motorola S-rec with symbols" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objcopy.symbolsrec"/>
 						</toolChain>
 					</folderInfo>
+					<fileInfo id="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.1642960711.87877547" name="handle_packet.c" rcbsApplicability="disable" resourcePath="Core/Src/handle_packet.c" toolsToInvoke="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.642932950.1661127614">
+						<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.642932950.1661127614" name="MCU GCC Compiler" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.642932950">
+							<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.includepaths.527200208" name="Include paths (-I)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.includepaths" valueType="includePath">
+								<listOptionValue builtIn="false" value="../Core/Inc"/>
+								<listOptionValue builtIn="false" value="../Drivers/STM32H5xx_HAL_Driver/Inc"/>
+								<listOptionValue builtIn="false" value="../Drivers/STM32H5xx_HAL_Driver/Inc/Legacy"/>
+								<listOptionValue builtIn="false" value="../Drivers/CMSIS/Device/ST/STM32H5xx/Include"/>
+								<listOptionValue builtIn="false" value="../Drivers/CMSIS/Include"/>
+								<listOptionValue builtIn="false" value="../NetXDuo/App"/>
+								<listOptionValue builtIn="false" value="../AZURE_RTOS/App"/>
+								<listOptionValue builtIn="false" value="../Middlewares/ST/netxduo/addons/dhcp"/>
+								<listOptionValue builtIn="false" value="../Middlewares/ST/threadx/common/inc"/>
+								<listOptionValue builtIn="false" value="../Middlewares/ST/netxduo/common/inc"/>
+								<listOptionValue builtIn="false" value="../Middlewares/ST/netxduo/ports/cortex_m33/gnu/inc"/>
+								<listOptionValue builtIn="false" value="../Middlewares/ST/threadx/ports/cortex_m33/gnu/inc"/>
+								<listOptionValue builtIn="false" value="../NetXDuo/Target"/>
+								<listOptionValue builtIn="false" value="../Middlewares/ST/netxduo/common/drivers/ethernet"/>
+								<listOptionValue builtIn="false" value="../Drivers/BSP/Components/lan8742"/>
+								<listOptionValue builtIn="false" value="../Libraries/fw-shared-modules/Inc"/>
+								<listOptionValue builtIn="false" value="../Libraries/nRF24L01P-lib"/>
+								<listOptionValue builtIn="false" value="../Libraries/proto-messages/proto_c"/>
+								<listOptionValue builtIn="false" value="../Libraries/protobuf"/>
+							</option>
+							<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.571510410" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
+						</tool>
+					</fileInfo>
 					<sourceEntries>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="AZURE_RTOS"/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Core"/>
 						<entry excluding="nRF24L01P-lib/examples" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Drivers"/>
-						<entry excluding="examples" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Libraries/nRF24L01P-lib"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Libraries/fw-shared-modules/Src"/>
-						<entry excluding="examples" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Libraries/nRF24L01P-lib"/>
-						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Libraries/nanopb/Src"/>
-						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Libraries/proto-messages/robot_action"/>
-						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Libraries/proto-messages/ssl_vision"/>
+						<entry excluding="examples" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Libraries/nRF24L01P-lib"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Libraries/proto-messages/proto_c"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Libraries/protobuf"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Middlewares"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="NetXDuo"/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Core"/>
-						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Libraries/protobuf/protobuf-c"/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Middlewares"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
