--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,3 +72,6 @@ add_custom_command(TARGET ${PROJECT_NAME}.elf POST_BUILD
         COMMAND ${CMAKE_OBJCOPY} -Obinary $<TARGET_FILE:${PROJECT_NAME}.elf> ${BIN_FILE}
         COMMENT "Building ${HEX_FILE}
 Building ${BIN_FILE}")
+
+add_custom_target(flash DEPENDS ${BIN_FILE} ${PROJECT_NAME}.elf COMMAND STM32_Programmer_CLI -c port=SWD sn=004C00283232511639353236 ap=1 -w ${BIN_FILE} 0x08000000 -rst)
+
