--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "Libraries/nRF24L01P-lib"]
-	path = Libraries/nRF24L01P-lib
-	url = https://github.com/LiU-SeeGoals/nRF24L01P-lib
 [submodule "proto-messages"]
 	path = proto-messages
 	url = git@github.com:LiU-SeeGoals/proto-messages.git
@@ -10,3 +7,6 @@
 [submodule "Libraries/fw-shared-modules"]
 	path = Libraries/fw-shared-modules
 	url = git@github.com:LiU-SeeGoals/fw-shared-modules.git
+[submodule "Libraries/nRF24L01P-lib"]
+	path = Libraries/nRF24L01P-lib
+	url = git@github.com:LiU-SeeGoals/nRF24L01P-lib.git
